# xml-rs

.github/workflows/: mayhem.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: read_events.rs
mayhem/: Dockerfile  read_events.mayhemfile
